web-infras/parser/tests/fixtures/babel/es2022/class-properties/yield-in-class-property-in-generator/output.txt
[SyntaxError]: 'yield' is only allowed within generator functions. (4,9)
4|    p = yield + 42;
 |       ^
